--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,7 @@
             "label": "Create Directory",
             "type": "shell",
             "command": "mkdir -p build",
-            "problemMatcher": []
+            "dependsOrder": "sequence"
         },
         {
             "label": "Build Project",
@@ -15,6 +15,7 @@
                 "kind": "build",
                 "isDefault": true
             },
+            "dependsOrder": "sequence",
             "problemMatcher": ["$gcc"]
         },
         {
