Added sleeping for countdown

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,7 +10,7 @@
         {
             "label": "Build Project",
             "type": "shell",
-            "command": "g++ -o build/main src/main.cpp",
+            "command": "g++ -std=c++11 -o build/main src/main.cpp",
             "group": {
                 "kind": "build",
                 "isDefault": true
