--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,14 +10,14 @@
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
-            "externalConsole": true, // Use an external console
+            "externalConsole": true, 
             "MIMode": "gdb",
             "miDebuggerPath": "C:/MinGW/bin/gdb.exe",
             "setupCommands": [
                 {
                     "description": "Enable pretty-printing for gdb",
                     "text": "-enable-pretty-printing",
-                    "ignoreFailures": true
+                    "ignoreFailures": false,
                 }
             ],
             "preLaunchTask": "Prelaunch Tasks",
